Updating formatting, removing theme

--- a/readme_01092025.md
+++ b/readme_01092025.md
@@ -1,15 +1,9 @@
 # Sam Jones
 _Senior Software Engineer | Customer-focused Technology Leader_
 
-| 📱 Phone | 📧 Email | 🔗 LinkedIn |
-|--|--|--|
-| 07500 894238 | [sam@smjdesign.co.uk](mailto:sam@smjdesign.co.uk) | [linkedin.com/in/samjones00](http://www.linkedin.com/in/samjones00) |
+📱 07500 894238 | 📧 [sam@smjdesign.co.uk](mailto:sam@smjdesign.co.uk) | 🔗[linkedin.com/in/samjones00](http://www.linkedin.com/in/samjones00)
 
----
-
-> A **customer-first minded** Senior Software Engineer with extensive experience in .NET development, React, and cloud technologies. Proven track record of delivering high-quality, testable code in agile environments while mentoring development teams. Strong expertise in building scalable microservices and APIs that drive business growth and operational efficiency.
-
----
+> A **customer-first minded** Senior Software Engineer with extensive experience in .NET development and cloud technologies. Proven track record of delivering high-quality, testable code in agile environments while mentoring development teams. Strong expertise in building scalable microservices and APIs that drive business growth and operational efficiency.
 
 ## 🚀 Core Technical Expertise
 
